@@ -149,6 +149,16 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|UUID
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -515,7 +525,7 @@ name|ReadEntity
 argument_list|>
 name|inputs
 decl_stmt|;
-comment|/**    * Note: outputs are not all determined at compile time.    * Some of the tasks can change the outputs at run time, because only at run    * time, we know what are the changes.  These tasks should keep a reference     * to the outputs here.     */
+comment|/**    * Note: outputs are not all determined at compile time.    * Some of the tasks can change the outputs at run time, because only at run    * time, we know what are the changes.  These tasks should keep a reference    * to the outputs here.    */
 specifier|private
 name|HashSet
 argument_list|<
@@ -861,9 +871,19 @@ operator|.
 name|SECOND
 argument_list|)
 argument_list|)
+operator|+
+literal|"_"
+operator|+
+name|UUID
+operator|.
+name|randomUUID
+argument_list|()
+operator|.
+name|toString
+argument_list|()
 return|;
 block|}
-comment|/**    * generate the operator graph and operator list for the given task based on    * the operators corresponding to that task.    *     * @param task    *          api.Task which needs its operator graph populated    * @param topOps    *          the set of top operators from which the operator graph for the    *          task is hanging    */
+comment|/**    * generate the operator graph and operator list for the given task based on    * the operators corresponding to that task.    *    * @param task    *          api.Task which needs its operator graph populated    * @param topOps    *          the set of top operators from which the operator graph for the    *          task is hanging    */
 specifier|private
 name|void
 name|populateOperatorGraph
@@ -1202,7 +1222,7 @@ expr_stmt|;
 block|}
 block|}
 block|}
-comment|/**    * Populate api.QueryPlan from exec structures. This includes constructing the    * dependency graphs of stages and operators.    *     * @throws IOException    */
+comment|/**    * Populate api.QueryPlan from exec structures. This includes constructing the    * dependency graphs of stages and operators.    *    * @throws IOException    */
 specifier|private
 name|void
 name|populateQueryPlan
@@ -5140,7 +5160,7 @@ operator|=
 name|started
 expr_stmt|;
 block|}
-comment|/**    * Gets the lineage information.    *     * @return LineageInfo associated with the query.    */
+comment|/**    * Gets the lineage information.    *    * @return LineageInfo associated with the query.    */
 specifier|public
 name|LineageInfo
 name|getLineageInfo
@@ -5150,7 +5170,7 @@ return|return
 name|linfo
 return|;
 block|}
-comment|/**    * Sets the lineage information.    *     * @param linfo The LineageInfo structure that is set in the optimization phase.    */
+comment|/**    * Sets the lineage information.    *    * @param linfo The LineageInfo structure that is set in the optimization phase.    */
 specifier|public
 name|void
 name|setLineageInfo
